--- a/sites/all/themes/sediscap/css/sediscap-alpha-default-normal.css
+++ b/sites/all/themes/sediscap/css/sediscap-alpha-default-normal.css
@@ -12,3 +12,14 @@
 #block-boxes-indicators-box span a {
   display: inline;
 }
+
+/* line 19, ../sass/sediscap-alpha-default-normal.scss */
+#block-oea-form-contrast-toggle,
+.atools-link,
+.zoom-controler {
+  text-align: right;
+  margin: 0.5em 0;
+  width: 37%;
+  float: right;
+  clear: right;
+}
