--- a/sites/all/themes/sediscap/sass/sediscap-alpha-default-normal.scss
+++ b/sites/all/themes/sediscap/sass/sediscap-alpha-default-normal.scss
@@ -13,3 +13,13 @@
 		display: inline;
 	}
 }
+
+#block-oea-form-contrast-toggle,
+.atools-link,
+.zoom-controler {
+	text-align: right;
+	margin: 0.5em 0;
+	width: 37%;
+	float: right;
+	clear: right;
+}
