--- a/sites/all/themes/sediscap/sass/sediscap-alpha-default.scss
+++ b/sites/all/themes/sediscap/sass/sediscap-alpha-default.scss
@@ -1,8 +1,12 @@
 @import "_colors.scss";
 
+#block-delta-blocks-logo {
+	margin: 1.9em 0 0;	
+}
 #block-delta-blocks-site-name {
-	margin: 18px 0;
+	margin: 3em 0 0;
 	float: left;
 	width: 345px;
 	text-align: left;
 }
+
