--- a/sites/all/themes/sediscap/sass/global.scss
+++ b/sites/all/themes/sediscap/sass/global.scss
@@ -42,6 +42,76 @@ ul.primary {
 	}
 }
 
+
+button:focus,
+button:active,
+input:focus,
+input:active,
+select:focus,
+select:active,
+textarea:focus,
+textarea:active {
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  z-index: 1; /* For Opera */
+}
+
+
+
+// textarea,
+// select,
+// input[type="date"],
+// input[type="datetime"],
+// input[type="datetime-local"],
+// input[type="email"],
+// input[type="month"],
+// input[type="number"],
+// input[type="password"],
+// input[type="search"],
+// input[type="tel"],
+// input[type="text"],
+// input[type="time"],
+// input[type="url"],
+// input[type="week"] {
+//   -moz-border-radius: 0;
+//   -webkit-border-radius: 0;
+//   border-radius: 0;
+  
+//   background:$sky;
+//   border: 0;
+//   border-bottom: 3px solid darken($sky,15%);
+//   color: #000;
+//   outline: 0;
+//   padding: 2px 3px;
+//   font-size: 13px;
+//   font-family: 'Open Sans', sans-serif;
+//   height: 1.8em;
+// }
+
+
+button,
+input[type="reset"],
+input[type="submit"],
+input[type="button"] {
+	-moz-border-radius: 0;
+	-webkit-border-radius: 0;
+	border-radius: 0;
+	background:$sky;
+	border: 0;
+	border-bottom: 3px solid darken($sky,15%);
+	color: #333;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 92%;
+	padding: 0.5em 0.7em;
+	text-shadow: none;
+	margin:0.2em;
+	&:hover{
+		background:lighten($sky,3%);		
+	}
+}
+
+
 .marker, .form-required{
 	font-size: 1.4em;
 }
@@ -96,14 +166,20 @@ h1,h2{
 #block-superfish-2{
 	display:none;
 }
-.responsive-menus.responsified span.toggler,
-.responsive-menus.responsified.responsive-toggled span.toggler {
-	border-radius: 0;
-	box-shadow: 0 0 0 transparent;
-	padding: 0.4em;
-	font-size: 1.5em;
-	color: black;
-	background: $lightGray;
+.responsive-menus.responsified,
+.responsive-menus.responsified.responsive-toggled {
+	span.toggler {
+		border-radius: 0;
+		box-shadow: 0 0 0 transparent;
+		padding: 0.4em;
+		font-size: 1.5em;
+		color: black;
+		background: $lightGray;
+		&:active{
+			background: darken($lightGray,35%);
+			color: white;
+		}
+	}
 }
 .responsive-menus.responsified .responsive-menus-simple{
 	background:$blue;
@@ -567,4 +643,12 @@ table td.mini a {
 .field-type-field-collection {
 	width: 100%;
 	overflow: scroll;
+}
+
+
+#block-oea-form-contrast-toggle,
+.atools-link,
+.zoom-controler {
+    text-align: center;
+    margin: 1em 0;
 }
